# thanatos

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
config/: poseidon.toml  thanatos.toml
resources/: thanatos.rc
scripts/: build-release-standalone.ps1  build-static.ps1  setup-vcpkg.ps1
scripts/linux/: build-arch.sh  build-linux.sh  setup-vcpkg.sh
scripts/windows/: run-tests.ps1  setup-vcpkg.ps1
src/application/ports/crypto/: IRng.hpp  ITokenGenerator.hpp
src/application/ports/net/: IClientWire.hpp  IConnectionHandler.hpp  ISession.hpp  ITcpServer.hpp
src/application/ports/query/: IQueryServer.hpp
src/application/services/: CharService.cpp  GameGuardBridge.cpp  GameGuardBridge.hpp  ICharService.hpp  ILoginService.hpp  LoginService.cpp
src/application/state/: SessionRegistry.cpp  SessionRegistry.hpp
src/bootstrap/: Main.cpp
src/domain/protocol/: Codec.hpp  Packet.hpp  PacketIds.hpp  Packets.hpp  Parser.hpp
src/infrastructure/config/: Config.cpp  Config.hpp
src/infrastructure/crypto/: Base64Url.hpp  Random16TokenGenerator.hpp  WinCngRng.hpp
src/infrastructure/log/: Logger.cpp  Logger.hpp
src/infrastructure/net/asio/: AsioTcpClient.cpp  AsioTcpClient.hpp  AsioTcpServer.cpp  AsioTcpServer.hpp  AsioTypes.hpp
src/infrastructure/presentation/: CardBuilder.hpp  StartupSummary.cpp  StartupSummary.hpp
src/infrastructure/terminal/: Console.cpp  Console.hpp  Output.hpp
src/interface/bootstrap/: Main.cpp
src/interface/dev/: CharHandlerDev.hpp  EchoHandlers.hpp  LoginHandlerDev.hpp  RoBridgeHandler.cpp  RoBridgeHandler.hpp
src/interface/query/: QueryHandler.cpp  QueryHandler.hpp  QueryProtocol.hpp  QueryServer.cpp  QueryServer.hpp
src/interface/query/bus/: BusProtocol.hpp
src/interface/ragnarok/: RagnarokServer.cpp  RagnarokServer.hpp
src/interface/ragnarok/char/: CharFlow.cpp  CharFlow.hpp  CharHandler.cpp  CharHandler.hpp
src/interface/ragnarok/dto/: ActorDTO.hpp  CharacterDTO.hpp  LoginDTO.hpp  MapDTO.hpp  SystemDTO.hpp
src/interface/ragnarok/login/: LoginFlow.cpp  LoginFlow.hpp  LoginHandler.cpp  LoginHandler.hpp
src/interface/ragnarok/mappers/: ActorMapper.hpp  CharacterMapper.hpp  LoginMapper.hpp  MapMapper.hpp  SystemMapper.hpp
src/interface/ragnarok/model/: PhaseSignal.hpp  SpawnTable.hpp
src/interface/ragnarok/proto/: Codec.cpp  Codec.hpp  Coords.hpp  LoginMessages.hpp  Messages.hpp
src/interface/ragnarok/protocol/: Codec.cpp  Codec.hpp  Coords.hpp  Opcodes.hpp
src/interface/ragnarok/wire/: SessionWire.hpp
src/interface/ro/: CharHandler.cpp  CharHandler.hpp  LoginHandler.cpp  LoginHandler.hpp  RagnarokServer.cpp  RagnarokServer.hpp
src/shared/: BannerPrinter.hpp  BuildInfo.hpp  Hex.hpp  LogFmt.hpp  Utils.hpp
src/shared/terminal/: Ansi.hpp  TextWidth.hpp  Utf8.hpp
tests/: CharServiceTests.cpp  LoginServiceTests.cpp  NetClientTests.cpp  ProtocolEdgeCases.cpp  ProtocolTests.cpp  QueryProtocolTests.cpp  QueryServerRoundtripTests.cpp  RoBridgeHandlerTests.cpp  SessionRegistryTests.cpp
